src/test/deca/syntax/invalid/print_sans_parent.deca

//Erreur: print sans parenthèses

{
    println "bankai" ;
}